Small fixes to Actions

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -8,8 +8,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Install pdoc3
-        run: pip install pdoc3 numpy lap
+      - name: Install numpy
+        run: pip install numpy
+      - name: Install requirements
+        run: pip install pdoc3 lap
       - name: Generate documentation
         run: pdoc --html SFSORT.py -o docs --force
       - name: Rename generated page to index.html
