--- a/.github/workflows/sfsort_test.yml
+++ b/.github/workflows/sfsort_test.yml
@@ -10,6 +10,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Install dependencies
         run: |
-          pip install ultralytics
+          pip install -U ultralytics ffmpeg-python
       - name: Run Python module to test if tracker works correctly
         run: python3 ultralytics_sfsort.py
